# ColumbiaU-MECS-4510-Evolutionary-Computation-and-Design-Automation

HW1/: TSP1.txt  TSP2.txt
HW2/: GP1_1.txt  GP1_2.txt  GP1_3.txt  GP1_4.txt  GP1_Div_1.txt  GP2_1.txt  GP2_2.txt  GP2_3.txt  GP2_4.txt  GP2_LP_1.txt  GP2_LP_2.txt  GP2_LP_3.txt  GP2_LP_4.txt  HW2.m  HW2.prj  Untitled3.m  dotData.mat  errorAndValidation.mat  errorAndValidation2.mat  function1.csv  makeplot.m  otherplots.m
HW2/New folder/: GP1_1.txt  GP1_2.txt  GP1_3.txt  GP1_4.txt  GP2_1.txt  GP2_2.txt  GP2_3.txt  GP2_4.txt  GP2_LP_1.txt  GP2_LP_2.txt  GP2_LP_3.txt  GP2_LP_4.txt
HW2/report/: HW2.aux  HW2.out  HW2.tex
HW3/: HW3  HW3.cpp  HW3.h  bouncing.txt  breathing.txt  data.txt  errcheck.cpp  fatal.cpp  loadtexbmp.cpp  makefile  makeplots.m
HW3/report/: BouncingCube.mkv  BouncingWithDamping.mkv  BreathingCube.mkv  HW3.aux  HW3.cpp  HW3.out  HW3.tex.bak  groundedNode.mkv
HW4/: CMakeLists.txt  bestGene_good.txt  cudaTest.cu  main.cpp  main.h  makeplots.m  populationDistance_good.txt
HW4/Untitled Folder/: bestGene_bad.txt  populationDistance_bad.txt
HW4/report/: HW4.aux  HW4.blg  HW4.out  HW4.tex.bak  main.cpp
HW5/: CMakeLists.txt  main.cpp  main.h
